@@ -110,8 +110,8 @@ cmake .. -DBUILD_MAN=ON -DBUILD_DOC=ON
 make
 make test # To run automated tests
 # if you don't want to install
-cd build
-./eta_gestemas recognizers.xml
+cd build/src
+./eta-gestemas ../recognizers.xml
 # to install it
 sudo make install
 eta-gestemas & # Run it or restart for auto run
@@ -140,7 +140,7 @@ git rebase -i master # rebase onto master
 sudo apt-get install git2cl # in case you don't have it.
 git log topic/your-branch --pretty --numstat --summary --no-merges | git2cl > ChangeLog
 git add ChangeLog
-git commit --amend # Amend ChangeLog changes, but don't change last commit message
+git commit --amend --no-edit # Amend ChangeLog changes, but don't change last commit message
 
 # Now we can merge topic/your-branch into master
 git checkout master
